--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/brand/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pulseboard - Focus Tracker for Solo Builders</title>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
     <div id="root"></div>
